# abapit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
abapit/: __init__.py  assign.py  auth.py  cli.py  client.py  config.py  demo.py  history.py  reports.py
abapit/web/: app.py
abapit/web/static/: style.css
abapit/web/templates/: _macros.html  activity.html  apps.html  assign.html  audit_events.html  base.html  blueprint_detail.html  blueprints.html  changes.html  configurations.html  coverage.html  dashboard.html  device_detail.html  devices.html  error.html  fleet_age.html  generic_table.html  item_detail.html  mdm_enrolled.html  mdm_server_detail.html  mdm_servers.html  probe.html  settings.html  user_group_detail.html  user_groups.html  users.html
tests/: conftest.py  test_assign.py  test_auth.py  test_client.py  test_config.py  test_history.py  test_reports.py  test_token_cache.py  test_web.py
